Fix video submission form display on mobile

--- a/stylus/main.css
+++ b/stylus/main.css
@@ -77,7 +77,6 @@ input[type=email]:focus {
 textarea {
   border: 1px solid LightGrey;
   border-radius: 0.5rem;
-  padding: 1rem;
   margin-top: 1rem;
   resize: none;
 }
@@ -103,6 +102,9 @@ input[type=reset]:hover {
 }
 body {
   padding-top: 5rem;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 .header {
   width: 100%;
@@ -306,24 +308,25 @@ section:nth-child(even) .wt_section-message {
   margin: 1rem;
 }
 .wt_form-banner {
-  width: 100%;
+  max-width: 100%;
+  margin: 2rem;
   min-height: 100vh;
-  margin-top: -5rem;
   display: flex;
   align-items: center;
 }
 .wt_form-banner > * {
   flex: 1;
-  margin: 10%;
-  max-width: 50rem;
+  max-width: 100%;
 }
 .wt_form-banner-message h1 {
   color: #fff;
   text-align: left;
   font-weight: bold;
 }
-.wt_form-banner-message .wt_cta {
-  margin: 2rem 0;
+input[type=text],
+input[type=email],
+textarea {
+  max-width: 100%;
 }
 .footer {
   background-color: #0d232f;
