--- a/stylus/require/global.styl
+++ b/stylus/require/global.styl
@@ -70,7 +70,7 @@ input[type=text]:focus, input[type=email]:focus
 textarea
     border 1px solid LightGrey
     border-radius 0.5rem
-    padding 1rem
+    // padding 1rem // causes the textarea to overflow
     margin-top 1rem
     resize none
 
